# ipython-beartype

./: .gitignore  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: python_release.yml  python_test.yml  tox.yml
src/ipython_beartype/: __init__.py
