[metadata]
name = ipython-beartype
version = 0.1.0
description = IPython extension type-checking IPython environments with beartype.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tusharsadhwani/ipython-beartype
author = Tushar Sadhwani
author_email = tushar.sadhwani000@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed

[options]
packages = find:
install_requires =
    beartype
    IPython
python_requires = >=3.8
package_dir = =src

[options.packages.find]
where = ./src

[options.extras_require]
dev =
    black
    mypy
    pytest
    pytest-cov
    setuptools
    tox
    twine
    wheel

[options.package_data]
ipython-beartype =
    py.typed

[tool:pytest]
addopts = --cov --cov-report=term-missing
